--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,70 @@
-# Compiled class file
+
+###################### General ##################
+
+# -
+
+
+
+###################### OS generated #############
+
+########### Mac OS X
+*~
+._*
+__MACOSX
+.DS_Store
+.DS_Store?
+.Spotlight-V100
+.Trashes
+### jenv
+.java-version
+
+########### Windows
+Desktop.ini
+ehthumbs.db
+Thumbs.db
+
+########### Linux
+# -
+
+
+
+###################### IDE configurations #######
+
+########### IntelliJ Idea
+.idea/
+.intellij/
+*.eml
+*.iws
+*.iml
+*.ipr
+out/
+
+########### Eclipse
+.externalToolBuilders/
+.metadata*/
+.recommenders/
+.settings/
+eclipsebin/
+RemoteSystemsTempFiles/
+.project
+.classpath
+
+########### Visual Studio Code
+*.code-workspace
+.factorypath
+
+
+
+###################### Build automation tools ###
+
+.gradle/
+.m2/
+
+
+
+###################### Compiler #################
+
+bin/
+build/
+target/
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
